# gemini-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  LLM_CONTEXT.md  TESTING.md
src/: client.rs  error.rs  lib.rs  models.rs  types.rs
tests/: advanced_test.rs  basic_test.rs  chat_test.rs  costacontrol_test.rs  json_mode_test.rs  unit_tests.rs
