[package]
name = "gemini-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ney Rojas <xecklet@gmail.com>"]
description = "Ergonomic Rust SDK for Google Gemini AI - Python-like API"
license = "MIT"
repository = "https://github.com/neyrojasj/gemini-rs"
homepage = "https://github.com/neyrojasj/gemini-rs"
documentation = "https://docs.rs/gemini-rs"
readme = "README.md"
keywords = ["gemini", "ai", "google", "llm", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]
rust-version = "1.70"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Optional: for image support
base64 = { version = "0.21", optional = true }
mime = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = ["multimodal"]
multimodal = ["base64", "mime"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
